; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/dbghelp/extr_elf_module.c_elf_reset_file_map.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/dbghelp/extr_elf_module.c_elf_reset_file_map.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.image_file_map = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32, i32*, i32*, i32 }

@IMAGE_NO_MAP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.image_file_map*)* @elf_reset_file_map to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @elf_reset_file_map(%struct.image_file_map* %0) #0 {
  %2 = alloca %struct.image_file_map*, align 8
  store %struct.image_file_map* %0, %struct.image_file_map** %2, align 8
  %3 = load %struct.image_file_map*, %struct.image_file_map** %2, align 8
  %4 = getelementptr inbounds %struct.image_file_map, %struct.image_file_map* %3, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  store i32 -1, i32* %6, align 8
  %7 = load i32, i32* @IMAGE_NO_MAP, align 4
  %8 = load %struct.image_file_map*, %struct.image_file_map** %2, align 8
  %9 = getelementptr inbounds %struct.image_file_map, %struct.image_file_map* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 3
  store i32 %7, i32* %11, align 8
  %12 = load %struct.image_file_map*, %struct.image_file_map** %2, align 8
  %13 = getelementptr inbounds %struct.image_file_map, %struct.image_file_map* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 2
  store i32* null, i32** %15, align 8
  %16 = load %struct.image_file_map*, %struct.image_file_map** %2, align 8
  %17 = getelementptr inbounds %struct.image_file_map, %struct.image_file_map* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 1
  store i32* null, i32** %19, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
